backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: reservas-backend
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: reservas-backend
  type: ClusterIP
