db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: reservas-db
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql
  selector:
    app: reservas-db
  clusterIP: None  # Servicio headless para acceso directo a la base de datos
