notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
  labels:
    app: reservas-notifications
spec:
  selector:
    app: reservas-notifications
  ports:
  - name: http
    port: 5001
    targetPort: 5001
    protocol: TCP
  type: ClusterIP
